# rest_client

./: LICENSE  pyproject.toml
restclient/: client.py  configuration.py  utilities.py
